--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title> Práctica 8</title>
 <meta charset="UTF-8">
-<link rel="stylesheet"  href="C:\Users\Alumno\Downloads\estilo de hoja intex.css"
+<link rel="stylesheet"  href="estilo de hoja intex.css"
 </head>
 
 
